rename [username] field to [email]

--- a/.gitignore
+++ b/.gitignore
@@ -266,4 +266,7 @@ pyrightconfig.json
 # idea
 .idea
 
+# database
+db.sqlite3
+
 # End of https://www.toptal.com/developers/gitignore/api/django,python
